Fix iOS Alignment

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,12 @@
 @import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
+body {
+	padding-top: env(safe-area-inset-top);
+	padding-bottom: env(safe-area-inset-bottom);
+	padding-left: env(safe-area-inset-left);
+	padding-right: env(safe-area-inset-right);
+}
 
 :root {
 	--background: oklch(1 0 0);
